--- a/style.css
+++ b/style.css
@@ -61,9 +61,10 @@ z-index: 99;
 .inicio{
     background: linear-gradient(to top, rgba(30,35,38,8) , rgba(117, 250, 212)), url(img/nube.jpg);
     background-size: cover;
-    height: 100vh;
+    min-height: 100vh;
     color: #fff;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
 }
 .inicio .contenido-banner{
@@ -71,12 +72,30 @@ z-index: 99;
     background-color: #1cb698;
     max-width: 350px;
     margin: auto;
+    margin-top: 25px;
+    margin-bottom: 30px;
+    text-align: center;
+    border-radius: 40px;
+}
+.inicio .contenido-banner2{
+    padding: 20px;
+    background-color: #1cb698;
+    max-width: 350px;
+    margin: auto;
+    margin-top: 25px;
+    margin-bottom: 30px;
     text-align: center;
     border-radius: 40px;
 }
 .inicio .contenido-banner img{
     margin-top: 40px;
     border: 10px solid rgb(0, 255, 247);
+    width: 100%;
+    margin: auto;
+    border-radius: 10%;
+}
+.inicio .contenido-banner2 img{
+    margin-top: 40px;
     width: 100%;
     margin: auto;
     border-radius: 10%;
@@ -113,6 +132,8 @@ z-index: 99;
     background-color: black;
     color: #fff;
     padding: 50px 20px;
+    display: flex;
+    flex-wrap: wrap;
 }
 .sobremi .contenido-seccion{
     max-width: 1100px;
@@ -138,6 +159,7 @@ z-index: 99;
 }
 .sobremi .fila .col{
     width: 50%;
+    
 }
 .sobremi .fila .col h3{
     font-size: 28px;
@@ -219,4 +241,185 @@ z-index: 99;
 /* Cv */
 
 /* Extra */
+.wrapper{
+    width: 90%;
+    margin: 0 auto;
+    max-width: 100%;
+  }
+  /* Acomoda para que este uno al lado de otro */
+  .cols{
+    display: -webkit-box;
+    
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  /* que no se ropa la col */
+  .col{
+    width: calc(25% - 2rem);
+    margin: 1rem;
+    cursor: pointer;
+    
+  }
+  /* Mantiene todo contenido */
+  .container{
+    -webkit-transform-style: preserve-3d;
+            transform-style: preserve-3d;
+      -webkit-perspective: 1000px;
+      perspective: 1000px;
+  }
+  /* El front y el back stylos */
+  .front, .back{
+    background-size: cover;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.25);
+    border-radius: 10px;
+      background-position: center;
+      -webkit-transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
+      transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
+      -o-transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
+      transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
+      transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1), -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
+      -webkit-backface-visibility: hidden;
+              backface-visibility: hidden;
+      text-align: center;
+      min-height: 280px;
+      box-shadow: 0 0 10px solid blue;
+      
+      height: auto;
+      border-radius: 10px;
+      color: #fff;
+      font-size: 1.5rem;
+  }
+  /* solo el back */
+  .back{
+    background: #0562a9;
+    background: -webkit-linear-gradient(45deg,  #071a28 0%,#00eeff 100%);
+    background: -o-linear-gradient(45deg,  #cedce7 0%,#596a72 100%);
+    background: linear-gradient(45deg,  #cedce7 0%,#596a72 100%);
+  }
+  /* se sombrea para que al no estar encima solo se vea el front*/
+  .front:after{
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
+      width: 100%;
+      height: 100%;
+      content: '';
+      display: block;
+      opacity: .6;
+      background-color: #000;
+      -webkit-backface-visibility: hidden;
+              backface-visibility: hidden;
+      border-radius: 10px;
+  }
+
+  
+  .container:hover .front,
+  .container:hover .back{
+      -webkit-transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
+      transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
+      -o-transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
+      transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
+      transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1), -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
+  }
+  /* Que el front este encima del back */
+  .back{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+  }
+  /* Que tenga el efecto de profundidad y centrado del front y back */
+  .inner{
+      -webkit-transform: translateY(-50%) translateZ(60px) scale(0.94);
+              transform: translateY(-50%) translateZ(60px) scale(0.94);
+      top: 50%;
+      position: absolute;
+      left: 0;
+      width: 100%;
+      padding: 2rem;
+      -webkit-box-sizing: border-box;
+              box-sizing: border-box;
+      outline: 1px solid transparent;
+      -webkit-perspective: inherit;
+              perspective: inherit;
+      z-index: 2;
+  }
+  /* rotacion de giro */
+  .container .back{
+      -webkit-transform: rotateY(180deg);
+              transform: rotateY(180deg);
+      -webkit-transform-style: preserve-3d;
+              transform-style: preserve-3d;
+  }
+  /* Pequeño ajuste del contenido front */
+  .container .front{
+      -webkit-transform: rotateY(0deg);
+              transform: rotateY(0deg);
+      -webkit-transform-style: preserve-3d;
+              transform-style: preserve-3d;
+  }
+  /* Muestra el panel del medio y anima el back */
+  .container:hover .back{
+    -webkit-transform: rotateY(0deg);
+            transform: rotateY(0deg);
+    -webkit-transform-style: preserve-3d;
+            transform-style: preserve-3d;
+  }
+  /* complleta la animacion de giro al poner el mouse */
+  .container:hover .front{
+    -webkit-transform: rotateY(-180deg);
+            transform: rotateY(-180deg);
+    -webkit-transform-style: preserve-3d;
+            transform-style: preserve-3d;
+  }
+  /* Fuente de texto p */
+  .front .inner p{
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    position: relative;
+  }
+  /* el separador de los textos */
+  .front .inner p:after{
+    content: '';
+    width: 4rem;
+    height: 2px;
+    position: absolute;
+    background: #C6D4DF;
+    display: block;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    bottom: -.75rem;
+  }
+  /* sombre el sub texto */
+  .front .inner span{
+    color: rgba(255,255,255,0.7);
+    font-family: 'Montserrat';
+    font-weight: 300;
+  }
 /* Extra */
+@media screen and 
+  (max-width: 64rem){
+    .col{
+      width: calc(33.333333% - 2rem);
+    }
+  }
+  
+  @media screen and
+   (max-width: 48rem){
+    .col{
+      width: calc(50% - 2rem);
+    }
+  }
+  
+  @media screen and (max-width: 28rem){
+    .col{
+      width: 100%;
+      margin: 0 0 2rem 0;
+    }
+  }
