--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ z-index: 99;
 }
 /* Seccion INICIO */
 .inicio{
-    background: linear-gradient(to top, rgba(30,35,38,8) , rgba(117, 250, 212)), url(img/nube.jpg);
+    background: linear-gradient(to top, rgba(30,35,38,8) , rgba(117, 250, 212)), url();
     background-size: cover;
     min-height: 100vh;
     color: #fff;
